--- a/app/styles.less
+++ b/app/styles.less
@@ -1,1 +1,20 @@
 @import "./stylesheets/normalize";
+@import "./stylesheets/variables";
+
+*, *::before, *::after{
+  box-sizing: border-box;
+}
+
+a, input, button{
+  transition: var(--transition);
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: var(--font-size);
+  font-weight: var(--font-weight);
+  line-height: var(--font-line-height);
+  width: 100vw;
+  overflow-x: hidden;
+  background-color: var(--color-dark);
+}
