--- a/app/stylesheets/variables.less
+++ b/app/stylesheets/variables.less
@@ -27,5 +27,5 @@
   --font-title-line-height: 1.25;
   --font-super-title-line-height: 1.1;
 
-  --transition: all .35 ease-in-out;
+  --transition: all .35s ease-in-out;
 }
