--- a/app/components/Button/styles.less
+++ b/app/components/Button/styles.less
@@ -1,6 +1,5 @@
 .Button{
   background-color: transparent;
-  border: 1px solid var(--color-light-grey);
   color: var(--color-light-grey);
   font-size: var(--font-size);
   padding: 12px 16px 12px 12px;
@@ -10,29 +9,49 @@
   &:focus{
     outline: none;
   }
+  &:hover{
+    color: var(--color-white);
+    cursor: pointer;
+  }
+  &.actived{
+    color: var(--color-white);
+  }
   &::before{
     content: "";
     display: inline-block;
     width: 24px;
     height: 24px;
-    background-image: url('./assets/icon-heart-grey.svg');
     background-size: contain;
-    margin-right: 12px;
   }
-  &:hover{
-    border-color: var(--color-negative);
-    color: var(--color-white);
-    cursor: pointer;
+  &.Button--Like{
+    border: 1px solid var(--color-light-grey);
     &::before{
-      background-image: url('./assets/icon-heart-white.svg');
+      background-image: url('./assets/icon-heart-grey.svg');
+      margin-right: 12px;
+    }
+    &:hover{
+      border-color: var(--color-negative);
+      &::before{
+        background-image: url('./assets/icon-heart-white.svg');
+      }
+    }
+    &.actived{
+      border-color: var(--color-negative);
+      background-color: var(--color-negative);
+      &::before{
+        background-image: url('./assets/icon-heart-full.svg');
+      }
     }
   }
-  &.actived{
-    border-color: var(--color-negative);
-    color: var(--color-white);
-    background-color: var(--color-negative);
+  &.Button--Back{
+    border: none;
     &::before{
-      background-image: url('./assets/icon-heart-full.svg');
+      background-image: url('./assets/icon-arrow-grey.svg');
+    }
+    &:hover{
+      &::before{
+        background-image: url('./assets/icon-arrow-white.svg');
+      }
     }
   }
 }
